--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -7,7 +7,12 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo_data:/data/db 
+      - mongo_data:/data/db
+  redisdb:
+    container_name: redisdb
+    restart: always
+    ports:
+      - "6379:6379"
 
 
   catalog.api:
@@ -19,3 +24,14 @@ services:
       - catalogdb
     ports:
       - "8000:80"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=redisdb:6379"
+    depends_on:
+      - redisdb
+    ports:
+      - "8001:80"
+
