--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,6 +7,9 @@ services:
   redisdb:
     image: redis:alpine
 
+  discountdb:
+    image: postgres
+
   portainer:
     image: portainer/portainer-ce
 
