--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -21,6 +21,11 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin1234
       - POSTGRES_DB=DiscountDb
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
   portainer:
     container_name: portainer
